objects/Product_Class__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Playout</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <description>Used to override name where necessary.  Not sure where i&apos;ll use yet just anticipating the complaints.</description>
        <label>Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use to determine if the class should be included in public facing lists such as community portal or cases.  Manually set.</inlineHelpText>
        <label>Customer Facing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z - Depreciated Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Epic__c</fullName>
        <description>Used to pull into the bug create flow what epic the bug should be added to.</description>
        <inlineHelpText>Used to pull into the bug create flow what epic the bug should be added to.</inlineHelpText>
        <label>Jira Epic</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Project__c</fullName>
        <description>used to help determine a suggestion when creating a jira bug through the interface.  There is an automatic way of doing it that could be setup but it didn&apos;t go well the first time.  Now it just suggests instead of actually creating.</description>
        <inlineHelpText>This is the Jira Project that should be suggested at the end of the create bug project.  Does not currently have any impact on the actual Jira Project a bug is for.  May be used more in the future.</inlineHelpText>
        <label>Jira Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Type_Configuration__c</fullName>
        <description>Used in the create cloud jira flow to determine what type fields to show.  heaven forbid they could all use the same process.</description>
        <inlineHelpText>This is used to determine what Jira Issue Types are available on the create bug screen.  There is no impact on the type actually used when creating the Jira.  Could be more automatic in the future.</inlineHelpText>
        <label>Jira Type Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Limits</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Issue + Question</fullName>
                </value>
                <value>
                    <fullName>Issue + Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <label>Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Oracle_Class_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Class Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Support_Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>tethered to the Oracle Support Project</description>
        <label>Oracle Support Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Oracle_Project_Task__c.Oracle_Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Oracle_Support_Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Oracle_Project_Task__c</referenceTo>
        <relationshipLabel>Product Class</relationshipLabel>
        <relationshipName>Product_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Support_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As of this creation Tammy Wait is in charge of providing these numbers.</description>
        <inlineHelpText>Related Oracle Support project, must be present on all customer facing for time tracking purposes.  Oracle Support projects are provided by Finance</inlineHelpText>
        <label>Oracle Support Project</label>
        <referenceTo>Oracle_Project__c</referenceTo>
        <relationshipLabel>Product Class</relationshipLabel>
        <relationshipName>Product_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>z-Depreciated Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CONTENT</fullName>
                </value>
                <value>
                    <fullName>NETWORK</fullName>
                </value>
                <value>
                    <fullName>Playout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GEN OFFERINGS AVP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_GL_Classcode__c</fullName>
        <label>Product GL Classcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRODUCT - GO - AVP</fullName>
                </value>
                <value>
                    <fullName>Professional Services - SEG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Key__c</fullName>
        <externalId>true</externalId>
        <label>Product Line Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Sales</fullName>
                </value>
                <value>
                    <fullName>ADVANCED ADVERTISING</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Command &amp; Control</fullName>
                </value>
                <value>
                    <fullName>Compress &amp; Transport</fullName>
                </value>
                <value>
                    <fullName>COMPRESSION</fullName>
                </value>
                <value>
                    <fullName>CONSOLES</fullName>
                </value>
                <value>
                    <fullName>DELIVERY</fullName>
                </value>
                <value>
                    <fullName>DOH</fullName>
                </value>
                <value>
                    <fullName>DTP</fullName>
                </value>
                <value>
                    <fullName>EDITING</fullName>
                </value>
                <value>
                    <fullName>Editing &amp; Graphics</fullName>
                </value>
                <value>
                    <fullName>GRAPHICS</fullName>
                </value>
                <value>
                    <fullName>INFOCASTER</fullName>
                </value>
                <value>
                    <fullName>Integrated Playout</fullName>
                </value>
                <value>
                    <fullName>INTRAPLEX</fullName>
                </value>
                <value>
                    <fullName>MAM</fullName>
                </value>
                <value>
                    <fullName>Master Control</fullName>
                </value>
                <value>
                    <fullName>MEDIA SERVER</fullName>
                </value>
                <value>
                    <fullName>MULTIVIEWERS</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Program Scheduling</fullName>
                </value>
                <value>
                    <fullName>Routers</fullName>
                </value>
                <value>
                    <fullName>ROUTING SWITCHERS</fullName>
                </value>
                <value>
                    <fullName>Servers &amp; Storage</fullName>
                </value>
                <value>
                    <fullName>Signaling &amp; Transcoding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Business_Unit__c</fullName>
        <label>Service Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Pillar__c</fullName>
        <label>Service Pillar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product_Family__c</fullName>
        <label>Service Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product_Line__c</fullName>
        <label>Service Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Project__c</fullName>
        <description>Used to drive time reporting.  values provided by Tammy Wait.</description>
        <inlineHelpText>Used for time reporting.  Value here must ALWAYS be provided by Finance</inlineHelpText>
        <label>z-Depreciated-Support Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>forSearch__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>used in background to allow &quot;All&quot; keyword to see all items in a lookup</description>
        <label>forSearch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Product Class</label>
    <listViews>
        <fullName>AdTech</fullName>
        <columns>NAME</columns>
        <columns>Service_Product_Line__c</columns>
        <columns>Service_Pillar__c</columns>
        <columns>Service_Business_Unit__c</columns>
        <columns>Service_Product_Family__c</columns>
        <columns>Common_Name__c</columns>
        <columns>Customer_Facing__c</columns>
        <columns>Active__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Service_Pillar__c</field>
            <operation>equals</operation>
            <value>AdTech</value>
        </filters>
        <label>AdTech</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Oracle_Class_Id__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Service_Product_Line__c</columns>
        <columns>Service_Pillar__c</columns>
        <columns>Service_Business_Unit__c</columns>
        <columns>Service_Product_Family__c</columns>
        <columns>Common_Name__c</columns>
        <columns>Customer_Facing__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Customer_Facing_Active</fullName>
        <columns>NAME</columns>
        <columns>Jira_Epic__c</columns>
        <columns>Jira_Project__c</columns>
        <columns>Jira_Type_Configuration__c</columns>
        <columns>Service_Product_Line__c</columns>
        <columns>Service_Pillar__c</columns>
        <columns>Service_Business_Unit__c</columns>
        <columns>Service_Product_Family__c</columns>
        <columns>Common_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Customer_Facing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Customer Facing Active</label>
    </listViews>
    <listViews>
        <fullName>Networking</fullName>
        <columns>NAME</columns>
        <columns>Service_Product_Line__c</columns>
        <columns>Service_Pillar__c</columns>
        <columns>Service_Business_Unit__c</columns>
        <columns>Service_Product_Family__c</columns>
        <columns>Common_Name__c</columns>
        <columns>Customer_Facing__c</columns>
        <columns>Active__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Service_Pillar__c</field>
            <operation>equals</operation>
            <value>Networking</value>
        </filters>
        <label>Networking</label>
    </listViews>
    <listViews>
        <fullName>Playout</fullName>
        <columns>NAME</columns>
        <columns>Service_Product_Line__c</columns>
        <columns>Service_Pillar__c</columns>
        <columns>Service_Business_Unit__c</columns>
        <columns>Service_Product_Family__c</columns>
        <columns>Common_Name__c</columns>
        <columns>Customer_Facing__c</columns>
        <columns>Active__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Service_Pillar__c</field>
            <operation>equals</operation>
            <value>Playout</value>
        </filters>
        <label>Playout</label>
    </listViews>
    <nameField>
        <label>Product Class Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Class</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>